chore: use yarn v3; update script

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,19 @@ public/
 
 # End of https://www.gitignore.io/api/node
 /dist
+### yarn
+# https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+# if you are NOT using Zero-installs, then:
+# comment the following lines
+# !.yarn/cache
+
+# and uncomment the following lines
+.pnp.*
+
