--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "url": "https://github.com/DanSnow/astexplorer-go"
   },
   "scripts": {
-    "build": "tsx scripts/build.mts"
+    "build": "tsx scripts/build.mts",
+    "test": "vitest"
   },
   "devDependencies": {
     "tsx": "^4.9.1",
+    "vitest": "^1.6.0",
     "zx": "^8.0.2"
   },
   "packageManager": "yarn@4.2.1"
