--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
+    "@types/golang-wasm-exec": "^1.15.2",
+    "happy-dom": "^15.11.6",
+    "prettier": "^3.3.3",
     "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
     "vitest": "^2.1.5",
     "zx": "^8.2.2"
   },
